# cxl-fabric-manager

./: AUTHORS  COPYING  Cargo.toml  ChangeLog  README
fm_cli/: Cargo.toml
fm_cli/src/: discover.rs  dynamic_capacity_device.rs  fm.rs  logical_device.rs  main.rs  mld_port.rs  multi_headed_device.rs  pci2pci_bridge.rs  physical_port.rs  switch.rs
fm_daemon/: Cargo.toml
fm_daemon/src/: discover.rs  dynamic_capacity_device.rs  fm.rs  logical_device.rs  main.rs  mld_port.rs  multi_headed_device.rs  pci2pci_bridge.rs  physical_port.rs  switch.rs
fm_library/: Cargo.toml
fm_library/src/: lib.rs
orchestrator/: Cargo.toml
orchestrator/src/: main.rs
