[package]
name = "fabric_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fm_library"
path = "fm_library/src/lib.rs"

[[bin]]
name = "fm_daemon"
path = "fm_daemon/src/main.rs"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
daemonize = "0.5.0"
